# Touhou-Rainbow-Market

./: .gitignore  CMakeLists.txt  Makefile  README.md  Touhou Rainbow Market.code-workspace  build.bat  build.sh  main.cpp
docs/: README.md  Todo.txt
gfx/: Makefile.xcf  Portraits.xcf  Screen Concept.xcf
include/: char.hpp  core.hpp  event.hpp  game.h  lots.hpp  market.hpp  player.hpp
include/Engine/Core/: Application.hpp  Engine.hpp
include/Engine/Graphics/: AssetManager.hpp  Sprite.hpp  Window.hpp
include/Engine/Input/: Input.hpp
include/Engine/Math/: Vector2.hpp
include/Game/: character.hpp  game.hpp  land.hpp  market.hpp  mechanics.hpp  player.hpp
include/win64_gl/glad/: glad.h
src/: char.cpp  core.cpp  event.cpp  lots.cpp  main.cpp  market.cpp  player.cpp
src/Engine/Core/: Engine.cpp
src/Engine/Graphics/: AssetManager.cpp  Sprite.cpp  Window.cpp
src/Engine/Input/: Input.cpp
src/Game/: character.cpp  event.cpp  game.cpp  land.cpp  main.cpp  market.cpp  mechanics.cpp  player.cpp
src/Game/Characters/: marisa.cpp  player_marisa.cpp  player_null.cpp  player_reimu.cpp  reimu.cpp
src/Game/Markets/: market_wriggle.cpp
src/Tests/: Test_Vector2.cpp
src/char/: marisa.cpp  reimu.cpp
src/markets/: wriggle.cpp
